--- a/style.css
+++ b/style.css
@@ -548,3 +548,100 @@ footer .footer-content p {
         font-size: 50px;
     }
 }
+
+/* For screen of max 430 pixel */
+@media (max-width: 430px) {
+
+    body, html {
+        scroll-behavior: smooth;
+        background-color: black;
+    }
+
+    nav ul li{
+        display: none;
+    }
+
+    nav .dropdown-content {
+        display: block;
+        align-items: flex-end;
+        position: fixed;
+    }
+
+    .dropdown-menu {
+        left: 2rem;
+        width: unset;
+        display: block;
+        position: fixed;
+        z-index: 1;
+    }
+
+    header .dropdown-menu ul li a {
+        font-family: var(--font-family-1);
+        font-size: 2rem;
+        text-decoration: none;
+        color: white;
+    }
+
+    .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: justify;
+        padding: 60px 20px;
+    }
+
+    .home-content h1 {
+        font-size: 4rem;
+    }
+
+    .me-content h1 {
+        font-size: 1rem;
+    }
+
+    .me-content h2 {
+        font-size: 0.7rem;
+    }
+
+    .image1 {
+        width: 270px;
+    }
+
+    .expi-content h1 {
+        font-size: 1.5rem;
+    }
+
+    .expi-content h3 {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .expi-content h2 {
+        font-size: 1rem;
+    }
+
+    .image2 {
+        width: 250px;
+    }
+
+    .skill-content h1 {
+        font-size: 1.7rem;
+        align-items: center;
+    }
+
+    .skill-content li {
+        font-size: 1.3rem;
+    }
+
+    .logo img{
+        width: 100px;
+        padding: 10px 10px;
+    }
+
+    footer .footer-content p {
+        font-size: 0.5rem;
+    }
+
+    .social-content li a i {
+        font-size: 50px;
+    }
+}
